# c-rs-std

./: CMakeLists.txt  oi.txt
include/: io.h  logging.h  mystdlib.h  result.h  vec.h
src/: io.c  main.c  result.c  vec.c
